--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@types/multer": "^1.4.7",
     "express": "^4.18.1",
+    "multer": "^1.4.5-lts.1",
     "ts-node-dev": "^2.0.0"
   },
   "scripts": {
