--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "license": "MIT",
   "dependencies": {
     "@types/multer": "^1.4.7",
+    "@types/swagger-ui-express": "^4.1.3",
+    "csv-parse": "^5.3.0",
     "express": "^4.18.1",
     "multer": "^1.4.5-lts.1",
+    "swagger-ui-express": "^4.5.0",
     "ts-node-dev": "^2.0.0"
   },
   "scripts": {
